service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice
  namespace: mynamespace
spec:
  selector:
    app: myapp
  ports:
  - port: 80
    targetPort: 8888
  type: ClusterIP
